minor table tweaks to salesRep and setting views. CSS to fix readability. Fixed logo link?

--- a/web-app/css/kpi.css
+++ b/web-app/css/kpi.css
@@ -49,7 +49,7 @@ body {
     padding-right: 10px;
 }
 
-.teamTable {
+.knTable {
     background-color: #000;
     padding: 10px;
     color: #fff;
@@ -149,4 +149,28 @@ table thead tr td {
 a:link {
     text-decoration: none;
     color: #fff;
+}
+
+a:visited {
+    color: #ffffff;
+}
+
+.pagination .step {
+    color: #000000;
+}
+
+.pagination .currentStep {
+    color: #000000;
+}
+
+.pagination .nextLink {
+    color: #000000;
+}
+
+.nav {
+    background-color: #ffffff;
+}
+
+h1 {
+    color: #e56b29;
 }
